[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "bookstore app"
authors = ["doug <emaildodoug@admin.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.0"
factory-boy = "^3.2.1"
Django = "^4.0.2"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
